fix button overlap

--- a/client/src/components/Card.css
+++ b/client/src/components/Card.css
@@ -15,11 +15,11 @@ i {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    min-height: 30%;
+    min-height: 35%;
 }
 
 .view {
-    min-height: 70%;
+    min-height: 65%;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
